fix: fixed breadcrumbs spacing

--- a/styles/_brodsmuler.less
+++ b/styles/_brodsmuler.less
@@ -1,5 +1,4 @@
 .brodsmuler {
-    margin-bottom: 2em;
     line-height: 2em;
     display: flex;
 
